<resources>
    <string name="app_name">GWeather Exercise</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="logout_error">Logout Error</string>
    <string name="logout_successful">Logout Successful</string>
    <string name="current">Current</string>
    <string name="history">History</string>
    <string name="fetch_current_weather_error">An error occurred while fetching current weather.</string>
    <string name="city_country">%1$s, %2$s</string>
    <string name="temp_in_c">%1$d°C</string>
    <string name="sunrise_time">Sunrise: %1$s</string>
    <string name="sunset_time">Sunset: %1$s</string>
</resources>